Adding to the Language files

--- a/admin/language/en-GB/en-GB.com_helloworld.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.ini
@@ -12,3 +12,12 @@ COM_HELLOWORLD_HELLOWORLD_FIELD_GREETING_DESC="This message will be displayed"
 COM_HELLOWORLD_HELLOWORLD_FIELD_GREETING_LABEL="Message"
 COM_HELLOWORLD_HELLOWORLD_HEADING_GREETING="Greeting"
 COM_HELLOWORLD_HELLOWORLD_HEADING_ID="Id"
+
+COM_HELLOWORLD_MANAGER_HELLOWORLDS="Hello World Messages"
+COM_HELLOWORLD_EDIT_HELLOWORLD="Edit"
+COM_HELLOWORLD_MANAGER_HELLOWORLD_NEW="Hello Worlds: New"
+COM_HELLOWORLD_MANAGER_HELLOWORLD_EDIT="Hello Worlds: Edit"
+COM_HELLOWORLD_HELLOWORLD_DETAILS="Helloworld Message Details"
+
+COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="This message will be displayed"
+COM_HELLOWORLD_HELLOWORLD_GREETING_LABEL="Message"
