Adding the Hello World delete message language

--- a/admin/language/en-GB/en-GB.com_helloworld.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.ini
@@ -18,6 +18,7 @@ COM_HELLOWORLD_EDIT_HELLOWORLD="Edit"
 COM_HELLOWORLD_MANAGER_HELLOWORLD_NEW="Hello Worlds: New"
 COM_HELLOWORLD_MANAGER_HELLOWORLD_EDIT="Hello Worlds: Edit"
 COM_HELLOWORLD_HELLOWORLD_DETAILS="Helloworld Message Details"
+COM_HELLOWORLD_N_ITEMS_DELETED="%s messages deleted"
 
 COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="This message will be displayed"
 COM_HELLOWORLD_HELLOWORLD_GREETING_LABEL="Message"
