Step 11 - Adding Verifications and Step 10 Ordering columns

--- a/admin/language/en-GB/en-GB.com_helloworld.ini
+++ b/admin/language/en-GB/en-GB.com_helloworld.ini
@@ -4,8 +4,14 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_HELLOWORLD_NUM="#"
+COM_HELLOWORLD_HELLOWORLDS_FILTER="Filters"
 COM_HELLOWORLD_PUBLISHED="Published"
-COM_HELLOWORLD_HELLOWORLDS_NAME="Name"
+COM_HELLOWORLD_HELLOWORLDS_NAME="Message"
+COM_HELLOWORLD_HELLOWORLDS_NUMBER="Number"
+COM_HELLOWORLD_HELLOWORLDS_EMAIL="Email"
+COM_HELLOWORLD_HELLOWORLDS_SECRET="Secret"
+COM_HELLOWORLD_HELLOWORLDS_DATE="Date"
+
 COM_HELLOWORLD_ID="Id"
 
 COM_HELLOWORLD_HELLOWORLD_FIELD_GREETING_DESC="This message will be displayed"
@@ -15,10 +21,28 @@ COM_HELLOWORLD_HELLOWORLD_HEADING_ID="Id"
 
 COM_HELLOWORLD_MANAGER_HELLOWORLDS="Hello World Messages"
 COM_HELLOWORLD_EDIT_HELLOWORLD="Edit"
-COM_HELLOWORLD_MANAGER_HELLOWORLD_NEW="Hello Worlds: New"
-COM_HELLOWORLD_MANAGER_HELLOWORLD_EDIT="Hello Worlds: Edit"
+COM_HELLOWORLD_MANAGER_HELLOWORLD_NEW="Add a new message"
+COM_HELLOWORLD_MANAGER_HELLOWORLD_EDIT="Change a message"
 COM_HELLOWORLD_HELLOWORLD_DETAILS="Helloworld Message Details"
 COM_HELLOWORLD_N_ITEMS_DELETED="%s messages deleted"
 
 COM_HELLOWORLD_HELLOWORLD_GREETING_DESC="This message will be displayed"
 COM_HELLOWORLD_HELLOWORLD_GREETING_LABEL="Message"
+
+COM_HELLOWORLD_HELLOWORLD_NUMBER_LABEL="Number"
+COM_HELLOWORLD_HELLOWORLD_NUMBER_DESC="Please enter a valid number"
+COM_HELLOWORLD_HELLOWORLD_EMAIL_LABEL="Email"
+COM_HELLOWORLD_HELLOWORLD_EMAIL_DESC="Please enter a valid email address"
+COM_HELLOWORLD_HELLOWORLD_EMAIL_MESSAGE="Invalid field: Email.  Enter someone@domain"
+COM_HELLOWORLD_HELLOWORLD_SECRET_LABEL="Secret"
+COM_HELLOWORLD_HELLOWORLD_SECRET_DESC="Enter letters only"
+COM_HELLOWORLD_HELLOWORLD_DATE_LABEL="Date"
+COM_HELLOWORLD_HELLOWORLD_DATE_DESC="Date Message"
+
+COM_HELLOWORLD_HELLOWORLD_SECRET_MESSAGE="Please include a capital letter -message"
+COM_HELLOWORLD_HELLOWORLD_SECRET_HINT="Please include a capital letter  -hint"
+
+COM_HELLOWORLD_HELLOWORLD_CREATIN="Hello world - Creating"
+COM_HELLOWORLD_HELLOWORLD_EDITING="Hello world - Editing"
+COM_HELLOWORLD_HELLOWORLD_ERROR_UNACCEPTABLE="You have an error"
+
